--- a/pages/game.html
+++ b/pages/game.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../styles/style.css">
-<link rel="shortcut icon" href="../images/favicon.ico" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="shortcut icon" href="../images/favicon.ico" />
 
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Avengers Game| Game</title>
+    <!-- Se recomienda importar el script abajo de todo en el HTML, así cuando corre ya está cargado todo el body -->
     <script src="../src/app.js" charset="utf-8"></script>
-</head>
+  </head>
 
-<body class="bodyGame">
+  <body class="bodyGame">
     <div class="score-board">
-        <h3>Puntaje</h3>
-        <h1 id="score">0</h1>
-        <a href="game.html">
-            <button type="button" class="btn-secondary">Nuevo &#10226;</button>
-        </a>
+      <h3>Puntaje</h3>
+      <h1 id="score">0</h1>
+      <a href="game.html">
+        <button type="button" class="btn-secondary">Nuevo &#10226;</button>
+      </a>
     </div>
 
     <div class="grid"></div>
-</body>
-
+    <!-- <script src="../src/app.js" charset="utf-8"></script> -->
+  </body>
 </html>
